Update GitHub repository link in index.html

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <div class="eyebrow"><span aria-hidden="true"></span> Accepted • WWW 2026</div>
       <div class="cta-row">
         <a class="button primary" href="#" target="_blank" rel="noopener">Paper</a>
-        <a class="button secondary" href="https://github.com/LuLiangsi/RLSTG" target="_blank" rel="noopener">Code</a>
+        <a class="button secondary" href="https://github.com/RLSTG/RLSTG" target="_blank" rel="noopener">Code</a>
       </div>
     </div>
   </header>
