Update author links and GitHub repository URL

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <div class="eyebrow"><span aria-hidden="true"></span> Accepted • WWW 2026</div>
       <div class="cta-row">
         <a class="button primary" href="#" target="_blank" rel="noopener">Paper</a>
-        <a class="button secondary" href="https://github.com/RLSTG/RLSTG" target="_blank" rel="noopener">Code</a>
+        <a class="button secondary" href="https://github.com/LuLiangsi/RLSTG" target="_blank" rel="noopener">Code</a>
       </div>
     </div>
   </header>
@@ -308,23 +308,23 @@
           </div>
           <ul class="authors-list">
             <li class="author-item">
-              <span class="author-name-inline">Liangsi Lu <span class="author-marker">†</span></span>
+              <a class="author-name-inline" href="https://luliangsi.github.io" target="_blank" rel="noopener">Liangsi Lu <span class="author-marker">†</span></a>
               <span class="author-affil">Guangdong University of Technology, Guangzhou, China</span>
             </li>
             <li class="author-item">
-              <span class="author-name-inline">Jingchao Wang <span class="author-marker">†</span></span>
+              <a class="author-name-inline" href="https://scholar.google.com/citations?hl=en&user=1ol5tV0AAAAJ" target="_blank" rel="noopener">Jingchao Wang <span class="author-marker">†</span></a>
               <span class="author-affil">Peking University, Beijing, China</span>
             </li>
             <li class="author-item">
-              <span class="author-name-inline">Zhaorong Dai</span>
+              <a class="author-name-inline" href="https://orcid.org/0009-0008-5479-2580" target="_blank" rel="noopener">Zhaorong Dai</a>
               <span class="author-affil">South China Agricultural University, Guangzhou, China</span>
             </li>
             <li class="author-item">
-              <span class="author-name-inline">Hanqian Liu</span>
+              <a class="author-name-inline" href="https://orcid.org/0009-0000-7666-192X" target="_blank" rel="noopener">Hanqian Liu</a>
               <span class="author-affil">Sun Yat-Sen University, Guangzhou, China</span>
             </li>
             <li class="author-item">
-              <span class="author-name-inline">Yang Shi <span class="author-marker alt">✉</span></span>
+              <a class="author-name-inline" href="https://cnshiyang.github.io/" target="_blank" rel="noopener">Yang Shi <span class="author-marker alt">✉</span></a>
               <span class="author-affil">Guangdong University of Technology, Guangzhou, China</span>
             </li>
           </ul>
