Change paper link and update BibTeX entry
Updated the paper link and BibTeX entry format.

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <h1>Riemannian Liquid Spatio-Temporal Graph Network</h1>
       <div class="eyebrow"><span aria-hidden="true"></span> Accepted • WWW 2026</div>
       <div class="cta-row">
-        <a class="button primary" href="#" target="_blank" rel="noopener">Paper</a>
+        <a class="button primary" href="https://arxiv.org/abs/2601.14115" target="_blank" rel="noopener">Paper</a>
         <a class="button secondary" href="https://github.com/LuLiangsi/RLSTG" target="_blank" rel="noopener">Code</a>
       </div>
     </div>
@@ -345,10 +345,14 @@
       <h2>BibTeX</h2>
       <div class="abstract bibtex-card">
         <button class="copy-btn" type="button" data-copy-bib>Copy</button>
-        <pre id="bibtex-entry" style="margin: 0; font-family: 'Space Grotesk', monospace; font-size: 14px; color: var(--muted); white-space: pre-wrap;">@inproceedings{lu2026rlstg,
-  title     = {Riemannian Liquid Spatio-Temporal Graph Network},
-  author    = {Lu, Liangsi and Wang, Jingchao and Dai, Zhaorong and Liu, Hanqian and Shi, Yang},
-  year      = {2026},
+        <pre id="bibtex-entry" style="margin: 0; font-family: 'Space Grotesk', monospace; font-size: 14px; color: var(--muted); white-space: pre-wrap;">@misc{lu2026rlstg,
+  title={Riemannian Liquid Spatio-Temporal Graph Network},
+  author={Liangsi Lu and Jingchao Wang and Zhaorong Dai and Hanqian Liu and Yang Shi},
+  year={2026},
+  eprint={2601.14115},
+  archivePrefix={arXiv},
+  primaryClass={cs.LG},
+  url={https://arxiv.org/abs/2601.14115},
 }</pre>
       </div>
     </section>
